--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
                 <div class="details">
                     <div class="meta">
                         <p><strong>Тип:</strong> комикс</p>
+                        <p><strong>Жанр:</strong> пародия, трагикомедия, исекай</p>
+                        <p><strong>Возрастной рейтинг:</strong> 18+</p>
                         <p><strong>Выпуск:</strong> 2025</p>
                         <p><strong>Глав:</strong> 1</p>
                         <p><strong>Статус:</strong> Выходит</p>
                         <p><strong>Автор:</strong> AniNova</p>
-                        <p><strong>Художник:</strong> BigBroo, Staryy</p>
                     </div>
                     
                     <div class="tabs">
