--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- SEO мета-теги -->
     <meta name="description" content="Читайте онлайн мангу 'Мне дали 0 характеристик, я дал 3,14зды' — пародийный исекай-комикс 2025 года с юмором и приключениями.">
-    <meta name="keywords" content="манга, исекай, пародия, комикс, читать онлайн, 3,14зды, аниме, юмор, манга 2025">
+    <meta name="keywords" content="AniNova, мне дали 0 характеристик я дал 3,14зды, мне дали 0 характеристик я дал пизды, манга, исекай, пародия, комикс, читать онлайн, 3,14зды, аниме, юмор, манга 2025">
     <meta name="robots" content="index, follow">
     <meta name="author" content="AniNova">
     
