--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мне дали 0 характеристик, я дал 3,14зды | Читать мангу онлайн</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <!-- SEO мета-теги -->
     <meta name="description" content="Читайте онлайн мангу 'Мне дали 0 характеристик, я дал 3,14зды' — пародийный исекай-комикс 2025 года с юмором и приключениями.">
