--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     
                     <div class="tab-content active" id="description">
                         <h2>Описание</h2>
-                        <p>Главный герой, обычный студент, неожиданно попадает в параллельный мир, где у всех есть уникальные характеристики и способности. Однако при проверке его характеристик система выдаёт ошибку - все значения равны нулю!</p>
-                        <p>Но наш герой не растерялся и решил дать системе свой ответ - 3,14зды! С этого момента начинается его невероятное приключение в мире, где правила пишутся на ходу, а логика остаётся за кадром.</p>
+                        <p>Обычный парень Сэрогами хотел лишь купить пива, но судьба приготовила ему нечто большее. Мир, где у всех есть силы, способности и четкие правила… Но только не у него. Когда система выдаёт ему нули, он отвечает ей по-своему — жёстко.</p>
+                        <p>Отвергнутый богами, осмеянный и брошенный в чуждый мир, он не ищет величия. Ему нужно лишь одно — своё пиво. Но когда герои этого мира оказываются хуже монстров, кто-то же должен навести порядок?</p>
                     </div>
                     
                     <div class="tab-content" id="chapters">
