--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Open Graph (для соцсетей и превью) -->
     <meta property="og:title" content="Мне дали 0 характеристик, я дал 3,14зды">
-    <meta property="og:description" content="Пародийный исекай-комикс. Студент с нулевыми характеристиками попадает в другой мир и начинает раздавать 3,14зды!">
+    <meta property="og:description" content="Пародийный исекай-комикс. Сэрогами попадает в другой мир и начинает раздавать 3,14зды!">
     <meta property="og:image" content="https://aninovacomics.github.io/images/cover.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
