--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
                         <p>Отвергнутый богами, осмеянный и брошенный в чуждый мир, он не ищет величия. Ему нужно лишь одно — своё пиво. Но когда герои этого мира оказываются хуже монстров, кто-то же должен навести порядок?</p>
 
                         <div class="tags">
-                            <span>#исекай</span>
-                            <span>#пародия</span>
-                            <span>#трагикомедия</span>
+                            <span>Пародия</span>
+                            <span>Безумие</span>
+                            <span>Исекай</span>
+                            <span>Комедия</span>
+                            <span>#Антигерой</span>
+                            <span>#Глупый ГГ</span>
+                            <span>#Огнестрельное оружие</span>
+                            <span>#ГГ Имба</span>
                         </div>
                     </div>
 
