--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         <p>Отвергнутый богами, осмеянный и брошенный в чуждый мир, он не ищет величия. Ему нужно лишь одно — своё пиво. Но когда герои этого мира оказываются хуже монстров, кто-то же должен навести порядок?</p>
 
                         <div class="tags">
+                            <span>18+</span>
                             <span>Пародия</span>
                             <span>Безумие</span>
                             <span>Исекай</span>
